<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:clipToPadding="false"
        />

    <org.lds.mobile.ui.widget.EmptyStateIndicator
        android:id="@+id/emptyStateIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:image="@drawable/ic_lds_note_80dp"
        app:imageTint="?attr/emptyStateImageColor"
        app:subTitle="@string/no_related_content_description2"
        app:subTitleTextColor="?attr/emptyStateSubTitleColor"
        app:title="@string/no_related_content"
        app:titleTextColor="?attr/emptyStateTitleColor"
        tools:visibility="visible"
        />
</LinearLayout>